{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 208,
  "lineage": "33d7b3e3-304c-d941-8ba5-e87559c719dc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0207f40d6af9d2b67",
            "arn": "arn:aws:ec2:us-east-1:044941685419:elastic-ip/eipalloc-0207f40d6af9d2b67",
            "domain": "vpc",
            "id": "eipalloc-0207f40d6af9d2b67",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-84-247-66.compute-1.amazonaws.com",
            "public_ip": "98.84.247.66",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044941685419:internet-gateway/igw-00d1953595f4060eb",
            "id": "igw-00d1953595f4060eb",
            "owner_id": "044941685419",
            "region": "us-east-1",
            "tags": {
              "AutoDelete": "true",
              "CostCenter": "eks-labs",
              "ManagedBy": "terraform",
              "Name": "demo-eks-igw",
              "Project": "demo-eks"
            },
            "tags_all": {
              "AutoDelete": "true",
              "CostCenter": "eks-labs",
              "ManagedBy": "terraform",
              "Name": "demo-eks-igw",
              "Project": "demo-eks"
            },
            "vpc_id": "vpc-0f82278c877938550"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0207f40d6af9d2b67",
            "association_id": "eipassoc-004876c6fc3f552ad",
            "connectivity_type": "public",
            "id": "nat-05017248239c3d9d9",
            "network_interface_id": "eni-081e2520d21e3c6dc",
            "private_ip": "10.0.15.154",
            "public_ip": "98.84.247.66",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0de58f05819444a31",
            "tags": {
              "AutoDelete": "true",
              "CostCenter": "eks-labs",
              "ManagedBy": "terraform",
              "Project": "demo-eks"
            },
            "tags_all": {
              "AutoDelete": "true",
              "CostCenter": "eks-labs",
              "ManagedBy": "terraform",
              "Project": "demo-eks"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-052b5ddfaac6fec4d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05017248239c3d9d9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-052b5ddfaac6fec4d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "044941685419",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-052b5ddfaac6fec4d"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_inet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00d1953595f4060eb",
            "id": "r-rtb-076997bca60920bb71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-076997bca60920bb7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "044941685419",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-076997bca60920bb7"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044941685419:route-table/rtb-052b5ddfaac6fec4d",
            "id": "rtb-052b5ddfaac6fec4d",
            "owner_id": "044941685419",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "AutoDelete": "true",
              "CostCenter": "eks-labs",
              "ManagedBy": "terraform",
              "Project": "demo-eks"
            },
            "tags_all": {
              "AutoDelete": "true",
              "CostCenter": "eks-labs",
              "ManagedBy": "terraform",
              "Project": "demo-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f82278c877938550"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "044941685419",
            "id": "rtb-052b5ddfaac6fec4d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044941685419:route-table/rtb-076997bca60920bb7",
            "id": "rtb-076997bca60920bb7",
            "owner_id": "044941685419",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "AutoDelete": "true",
              "CostCenter": "eks-labs",
              "ManagedBy": "terraform",
              "Name": "demo-eks-public-rt",
              "Project": "demo-eks"
            },
            "tags_all": {
              "AutoDelete": "true",
              "CostCenter": "eks-labs",
              "ManagedBy": "terraform",
              "Name": "demo-eks-public-rt",
              "Project": "demo-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f82278c877938550"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "044941685419",
            "id": "rtb-076997bca60920bb7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078b8f28f3d894519",
            "region": "us-east-1",
            "route_table_id": "rtb-052b5ddfaac6fec4d",
            "subnet_id": "subnet-0353145626337ce6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0560a90671b54ea82",
            "region": "us-east-1",
            "route_table_id": "rtb-052b5ddfaac6fec4d",
            "subnet_id": "subnet-0f85843590448811e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00afe72ac3dff7c98",
            "region": "us-east-1",
            "route_table_id": "rtb-076997bca60920bb7",
            "subnet_id": "subnet-0de58f05819444a31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001820efaf7af8bb7",
            "region": "us-east-1",
            "route_table_id": "rtb-076997bca60920bb7",
            "subnet_id": "subnet-078656ea4c372748f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044941685419:security-group/sg-000091caedfc83d0d",
            "description": "Cluster communication with worker nodes",
            "egress": [],
            "id": "sg-000091caedfc83d0d",
            "ingress": [],
            "name": "demo-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "044941685419",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "AutoDelete": "true",
              "CostCenter": "eks-labs",
              "ManagedBy": "terraform",
              "Name": "demo-eks-cluster-sg",
              "Project": "demo-eks"
            },
            "tags_all": {
              "AutoDelete": "true",
              "CostCenter": "eks-labs",
              "ManagedBy": "terraform",
              "Name": "demo-eks-cluster-sg",
              "Project": "demo-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f82278c877938550"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "044941685419",
            "id": "sg-000091caedfc83d0d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_self_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster components to communicate with each other",
            "from_port": 0,
            "id": "sgrule-796174299",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-000091caedfc83d0d",
            "security_group_rule_id": "sgr-0e100b238a6a893e9",
            "self": false,
            "source_security_group_id": "sg-000091caedfc83d0d",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044941685419:subnet/subnet-0353145626337ce6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0353145626337ce6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044941685419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "AutoDelete": "true",
              "CostCenter": "eks-labs",
              "ManagedBy": "terraform",
              "Name": "demo-eks-private-us-east-1a",
              "Project": "demo-eks",
              "kubernetes.io/cluster/demo-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "AutoDelete": "true",
              "CostCenter": "eks-labs",
              "ManagedBy": "terraform",
              "Name": "demo-eks-private-us-east-1a",
              "Project": "demo-eks",
              "kubernetes.io/cluster/demo-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f82278c877938550"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "044941685419",
            "id": "subnet-0353145626337ce6a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044941685419:subnet/subnet-0f85843590448811e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f85843590448811e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044941685419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "AutoDelete": "true",
              "CostCenter": "eks-labs",
              "ManagedBy": "terraform",
              "Name": "demo-eks-private-us-east-1b",
              "Project": "demo-eks",
              "kubernetes.io/cluster/demo-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "AutoDelete": "true",
              "CostCenter": "eks-labs",
              "ManagedBy": "terraform",
              "Name": "demo-eks-private-us-east-1b",
              "Project": "demo-eks",
              "kubernetes.io/cluster/demo-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f82278c877938550"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "044941685419",
            "id": "subnet-0f85843590448811e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044941685419:subnet/subnet-0de58f05819444a31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de58f05819444a31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "044941685419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "AutoDelete": "true",
              "CostCenter": "eks-labs",
              "ManagedBy": "terraform",
              "Name": "demo-eks-public-us-east-1a",
              "Project": "demo-eks",
              "kubernetes.io/cluster/demo-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "AutoDelete": "true",
              "CostCenter": "eks-labs",
              "ManagedBy": "terraform",
              "Name": "demo-eks-public-us-east-1a",
              "Project": "demo-eks",
              "kubernetes.io/cluster/demo-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f82278c877938550"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "044941685419",
            "id": "subnet-0de58f05819444a31",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044941685419:subnet/subnet-078656ea4c372748f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078656ea4c372748f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "044941685419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "AutoDelete": "true",
              "CostCenter": "eks-labs",
              "ManagedBy": "terraform",
              "Name": "demo-eks-public-us-east-1b",
              "Project": "demo-eks",
              "kubernetes.io/cluster/demo-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "AutoDelete": "true",
              "CostCenter": "eks-labs",
              "ManagedBy": "terraform",
              "Name": "demo-eks-public-us-east-1b",
              "Project": "demo-eks",
              "kubernetes.io/cluster/demo-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f82278c877938550"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "044941685419",
            "id": "subnet-078656ea4c372748f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:044941685419:vpc/vpc-0f82278c877938550",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-025dc9270a00c6355",
            "default_route_table_id": "rtb-0654ad78c225d85e0",
            "default_security_group_id": "sg-09315c9a9e1e838cc",
            "dhcp_options_id": "dopt-0372097fe5c86f5a1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f82278c877938550",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0654ad78c225d85e0",
            "owner_id": "044941685419",
            "region": "us-east-1",
            "tags": {
              "AutoDelete": "true",
              "CostCenter": "eks-labs",
              "ManagedBy": "terraform",
              "Name": "demo-eks-vpc",
              "Project": "demo-eks"
            },
            "tags_all": {
              "AutoDelete": "true",
              "CostCenter": "eks-labs",
              "ManagedBy": "terraform",
              "Name": "demo-eks-vpc",
              "Project": "demo-eks"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}